# deadline-planner

./: .gitignore  README.md  dev.sh  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: aiPlan.ts  aiimport.ts  availability.ts  client.ts  mock.ts  mockEngine.ts  mockTrack.ts  plans.ts  schedule.ts  tasks.ts  track.ts
frontend/src/components/calendar/: DayView.tsx  MonthView.tsx  WeekView.tsx
frontend/src/components/plans/: PlanForm.tsx
frontend/src/components/schedule/: BlockEditModal.tsx
frontend/src/components/tasks/: TaskForm.tsx  TaskList.tsx
frontend/src/components/track/: AttachmentSection.tsx  CareerSection.tsx  ChecklistSection.tsx  EstimateSection.tsx  WorkLogSection.tsx
frontend/src/components/ui/: Modal.tsx  (+1 more)
frontend/src/i18n/: index.ts  messages.ts
frontend/src/lib/: labels.ts
frontend/src/pages/: AIImportPage.tsx  AvailabilityPage.tsx  DayPage.tsx  MonthPage.tsx  SettingsPage.tsx  TaskDetailPage.tsx  TasksPage.tsx  TodayPage.tsx  WeekPage.tsx
frontend/src/store/: ui.ts
frontend/src/types/: index.ts
planner/: __init__.py  __main__.py  ai_plan.py  apikeys.py  career.py  cli.py  db.py  engine.py  estimate_ai.py  extract.py  importer.py  models.py  prompt.py  providers.py  scheduler.py  server.py  timeutils.py  track_api.py  trackmodels.py  webdb.py  webmodels.py
tests/: conftest.py  test_ai_api.py  test_ai_plan.py  test_cli.py  test_engine.py  test_extract.py  test_importer.py  test_prompt.py  test_scheduler.py  test_server.py  test_track_api.py
