[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deadline-planner"
version = "0.1.0"
description = "Local-first AI deadline planner: prompt generation, strict JSON import, deterministic scheduling"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
planner = "planner.cli:app"

[tool.setuptools.packages.find]
include = ["planner*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
