[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deadline-planner"
version = "0.1.0"
description = "Local-first AI deadline planner: prompt generation, strict JSON import, deterministic scheduling"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "typer>=0.9",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "httpx>=0.27"]

[project.scripts]
planner = "planner.cli:app"
planner-server = "planner.server:main"

[tool.setuptools.packages.find]
include = ["planner*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
